# echovault

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  run.sh  setup.sh
src/: config.py  main.py
src/audio/: player.py  recorder.py
src/llm/: base.py  claude_llm.py
src/stt/: base.py  whisper_api_stt.py  whisper_stt.py
src/tts/: base.py  piper_tts.py
src/ui/: event_bus.py  web_ui.py
src/ui/templates/: index.html
src/utils/: logger.py
src/wakeword/: base.py  oww_wakeword.py
